force-app/main/default/objects/Litmos__Module__c/fields/Litmos__Active__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>