force-app/main/default/objects/Litmos__Module__c/fields/Litmos__Date__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>