force-app/main/default/objects/Litmos__Module__c/fields/Litmos__Description__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Description__c</fullName>
    <label>Description</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>