force-app/main/default/objects/Litmos__Module__c/fields/Litmos__Score__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Score__c</fullName>
    <label>Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>