force-app/main/default/objects/Litmos__Module__c/fields/Litmos__User__c.field-meta.xml
<CustomField>
    <fullName>Litmos__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Modules</relationshipName>
    <type>Lookup</type>
</CustomField>